Converting REST API classes to records